LIST OF CHANGES FOR NPG-QC PACKAGE

release 70.3.0
 - tag_sniff get list of known tags via a URL rather than the warehouse DB

release 70.2.1
 - update version of github actions

release 70.2.0
 - extend documentation for setting manual QC outcomes programmatically
 - change CI runner from Ubuntu 18.04 to ubuntu-latest

release 70.1.0
 - add haplotag metrics

release 70.0.2
 - fix missing apt pkgs for github actions

release 70.0.1
 - use bcftools mpileup instead of samtools for genotype QC check
 - npg_substitution_metrics.pl avoid negative values and made metrics calculations more consistent

release 70.0.0
 - Add substitution metrics (CtoA) QC check
 - Added SS tag_sequence to reported matches
 
release 69.12.0
 - Removed an unused script - genotype_call_results_reporter.
 - Switched the QC outcomes reporter to retrieve LIMS server URL from
   the configuration file that is used by other applications.
 - Update tableExport JavaScript package to version 1.26.0

release 69.11.1
 - Normalisation of negative controls with PhiX:
     1. added a script to compute linear regression stats,
     2. added a document that captures an interim projetc review.
 - bower dependencies are expressed using https urls as unauth git endpoints
   are not supported in github anymore
 - update bower to 1.8.13

release 69.11.0
 - PDL CPAN Perl package had a flurry of releases recently, the latest
   at this time is 2.074 (2022-02-08). This verson has an undentified
   bug, which results in a failure of the reverse_average_percent_error
   method in the npg_qc::autoqc::role::sequence_error class. The failure
   was observed in the GitHub CI runner and on a local VM.
   Pinned PDL version to 2.068 or earlier since 2.068 is the vrsion we
   have in the latest production software stack and it is known to work.
 - Added a scipt that generates a dataset which is used in the
   computation of linear regression coefficients for normalisation of
   negative controls with PhiX.

release 69.10.1